# g-game-demo

./: .binpath  .gitignore  .metahash  Cargo.toml  build.rs  game.meta.txt  rust-toolchain.toml
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
tests/: test.rs  test2.rs
