[package]
name = "hello-world-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "academy" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "academy" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }